[gd_scene load_steps=6 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://sprites/foguete.png" type="Texture" id=2]
[ext_resource path="res://sprites/muro.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57, 27 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.5, 117 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Parede" type="Sprite" parent="."]
position = Vector2( 797, 155 )
scale = Vector2( 0.855932, 0.622715 )
texture = ExtResource( 3 )

[node name="Foguete" type="Sprite" parent="."]
position = Vector2( 88, 61 )
z_index = -1
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 51.0
margin_top = 485.0
margin_right = 119.0
margin_bottom = 505.0
text = "DISPARA"

[node name="Label" type="Label" parent="."]
margin_left = 625.0
margin_top = 245.0
margin_right = 665.0
margin_bottom = 259.0
text = "..."

[node name="Foguete2" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Foguete2"]
position = Vector2( 80, 354 )
shape = SubResource( 1 )

[node name="Foguete2" type="Sprite" parent="Foguete2"]
position = Vector2( 78, 354 )
texture = ExtResource( 2 )

[node name="Parede2" type="Area2D" parent="."]

[node name="Parede2" type="Sprite" parent="Parede2"]
position = Vector2( 796.875, 416.625 )
scale = Vector2( 0.809322, 0.598564 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parede2"]
position = Vector2( 797.5, 419 )
shape = SubResource( 2 )

[node name="Label2" type="Label" parent="."]
margin_left = 620.0
margin_top = 502.0
margin_right = 660.0
margin_bottom = 516.0
text = "..."

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="body_entered" from="Parede2" to="." method="_on_Parede2_body_entered"]
